24 step urlencode url

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,14 @@ venv/*
 render_website2.py
 render_website3.py
 template2.html
+
+pages/index1.html
+pages/index2.html
+pages/index3.html
+pages/index4.html
+pages/index5.html
+pages/index6.html
+pages/index7.html
+pages/index8.html
+pages/index9.html
+pages/index10.html
